[gd_scene load_steps=17 format=3 uid="uid://cfbxb3m0368xp"]

[ext_resource type="Script" path="res://Scripts/UI/custom_level_select.gd" id="1_tbeh6"]
[ext_resource type="Texture2D" uid="uid://5pk0boo12kaf" path="res://Assets/Sprites/UI/PlayBG.png" id="1_vsfeo"]
[ext_resource type="Texture2D" uid="uid://dhhr68mhkpj4q" path="res://Assets/Sprites/UI/PlayPanel.png" id="2_enqnm"]
[ext_resource type="FontFile" uid="uid://bhqyq3yxbvqkd" path="res://Assets/Sprites/UI/HUD/HUDFont.png" id="3_bkey0"]
[ext_resource type="Texture2D" uid="uid://vmnatqkj2lio" path="res://Assets/Sprites/UI/Arrow.png" id="6_mvb6o"]
[ext_resource type="PackedScene" uid="uid://bxirkhurqoou5" path="res://Instances/UI/Menus/device_assigner.tscn" id="7_artpy"]
[ext_resource type="Shader" path="res://Scripts/Shaders/circle_transition_tres.gdshader" id="7_yj0sv"]
[ext_resource type="PackedScene" uid="uid://bi6g06uvigns2" path="res://Instances/UI/Menus/player_select.tscn" id="8_883qj"]
[ext_resource type="PackedScene" uid="uid://buq5u2vf04i17" path="res://Instances/UI/Menus/player_amount_select.tscn" id="9_cx5na"]

[sub_resource type="Shader" id="Shader_la184"]
code = "shader_type canvas_item;

uniform vec2 motion = vec2(0.0);
uniform float scale = 1.0;
uniform vec2 offset = vec2(0.0);

void vertex(){
	UV = (VERTEX + offset + TIME * motion) * TEXTURE_PIXEL_SIZE * (1.0/scale);
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wb66w"]
shader = SubResource("Shader_la184")
shader_parameter/motion = Vector2(-8, -8)
shader_parameter/scale = 1.0
shader_parameter/offset = Vector2(0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_78nf2"]
shader = ExtResource("7_yj0sv")
shader_parameter/circle_size = 1.05
shader_parameter/screen_width = 480.0
shader_parameter/screen_height = 270.0

[sub_resource type="Animation" id="Animation_7g136"]
resource_name = "Close"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/circle_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.05, 0.0]
}

[sub_resource type="Animation" id="Animation_51p7q"]
resource_name = "Open"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/circle_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.05]
}

[sub_resource type="Animation" id="Animation_g7txi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/circle_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.05]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jk2e5"]
_data = {
&"Close": SubResource("Animation_7g136"),
&"Open": SubResource("Animation_51p7q"),
&"RESET": SubResource("Animation_g7txi")
}

[node name="CustomLevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tbeh6")

[node name="Panel" type="NinePatchRect" parent="."]
layout_mode = 0
offset_right = 480.0
offset_bottom = 272.0
texture = ExtResource("2_enqnm")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="BG" type="TextureRect" parent="Panel"]
material = SubResource("ShaderMaterial_wb66w")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_vsfeo")
stretch_mode = 1

[node name="Header" type="NinePatchRect" parent="."]
layout_mode = 0
offset_right = 480.0
offset_bottom = 16.0
texture = ExtResource("2_enqnm")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="Label" type="Label" parent="Header"]
layout_mode = 1
offset_right = 112.0
offset_bottom = 16.0
theme_override_fonts/font = ExtResource("3_bkey0")
text = " Custom Levels "
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="ListContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 16.0
grow_horizontal = 2
grow_vertical = 2
follow_focus = true
scroll_vertical_custom_step = 16.0
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="ListContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 4
theme_override_constants/margin_bottom = 16

[node name="Container" type="VBoxContainer" parent="ListContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 16

[node name="NoLevelError" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -4.0
offset_right = 64.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_bkey0")
text = "No Levels Found!"
uppercase = true

[node name="Arrow" type="CenterContainer" parent="."]
layout_mode = 1
use_top_left = true

[node name="Texture" type="TextureRect" parent="Arrow"]
layout_mode = 2
texture = ExtResource("6_mvb6o")
flip_h = true

[node name="CircleFade" type="ColorRect" parent="."]
z_index = 5
material = SubResource("ShaderMaterial_78nf2")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CircleAnimation" type="AnimationPlayer" parent="CircleFade"]
libraries = {
&"": SubResource("AnimationLibrary_jk2e5")
}
autoplay = "Open"

[node name="LoadingText" type="Label" parent="."]
visible = false
z_index = 10
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -116.0
offset_top = -4.0
offset_right = 116.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_bkey0")
text = "Loading Level, Please wait..."
uppercase = true

[node name="PlayerAmountSelect" parent="." instance=ExtResource("9_cx5na")]
visible = false
layout_mode = 1

[node name="Panel" type="Panel" parent="PlayerAmountSelect"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DeviceAssigner" parent="." instance=ExtResource("7_artpy")]
visible = false
layout_mode = 1

[node name="Panel" type="Panel" parent="DeviceAssigner"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CharacterSelect" parent="." instance=ExtResource("8_883qj")]
layout_mode = 1

[node name="Panel" type="Panel" parent="CharacterSelect"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="level_selected" from="." to="PlayerAmountSelect" method="open"]
[connection signal="selected" from="PlayerAmountSelect" to="PlayerAmountSelect" method="exit"]
[connection signal="selected" from="PlayerAmountSelect" to="DeviceAssigner" method="open"]
[connection signal="finished" from="DeviceAssigner" to="DeviceAssigner" method="close"]
[connection signal="finished" from="DeviceAssigner" to="CharacterSelect" method="open"]
